<resources>

    <string name="app_name">Breadcrumbs</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Breadcrumbs</string>
	<string name="preferences_title">Settings</string>

    <string name="preference_settings_title">App Settings</string>
    <string name="preference_info_title">App Information</string>
    
    <string name="preference_background_color_title">Background Color</string>
    <string name="preference_background_color_dialog_title">Choose a color</string>
    
    <string name="preference_range_title">Search Range</string>
    <string name="preference_range_dialog_title">Choose a distance</string>
    
    <string name="preference_password_title">Password</string>
    <string name="preference_password_info">Enter a password to protect settings.</string>
    
    <string name="preference_message_1_title">Message 1</string>
    <string name="preference_message_2_title">Message 2</string>
    <string name="preference_message_3_title">Message 3</string>
    
    <string name="preference_message_1_lat_title">Latitude</string>
    <string name="preference_message_1_lat_info">90N is 90, 90S is -90.</string>
    <string name="preference_message_1_long_title">Longitude</string>
    <string name="preference_message_1_long_info">180E is 180, 180W is -180.</string>
    <string name="preference_message_1_message_title">Message</string>
    <string name="preference_message_1_message_info">Message to be displayed.</string>
</resources>