<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This is a primitive example showing the different types of preferences available. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory android:title="@string/preference_message_1_title" >
	    <EditTextPreference
                android:key="pref_mess_1_lat"
                android:title="@string/preference_message_1_lat_title"
                android:summary="@string/preference_message_1_lat_info"
                android:dialogTitle="@string/preference_message_1_lat_title" />
	    <EditTextPreference
                android:key="pref_mess_1_long"
                android:title="@string/preference_message_1_long_title"
                android:summary="@string/preference_message_1_long_info"
                android:dialogTitle="@string/preference_message_1_long_title" />
	    <EditTextPreference
                android:key="pref_mess_1_mess"
                android:title="@string/preference_message_1_message_title"
                android:summary="@string/preference_message_1_message_info"
                android:dialogTitle="@string/preference_message_1_message_title" />
    </PreferenceCategory>
    
	<PreferenceCategory android:title="@string/preference_message_2_title" >
	    <EditTextPreference
                android:key="pref_mess_2_lat"
                android:title="@string/preference_message_1_lat_title"
                android:summary="@string/preference_message_1_lat_info"
                android:dialogTitle="@string/preference_message_1_lat_title" />
	    <EditTextPreference
                android:key="pref_mess_2_long"
                android:title="@string/preference_message_1_long_title"
                android:summary="@string/preference_message_1_long_info"
                android:dialogTitle="@string/preference_message_1_long_title" />
	    <EditTextPreference
                android:key="pref_mess_2_mess"
                android:title="@string/preference_message_1_message_title"
                android:summary="@string/preference_message_1_message_info"
                android:dialogTitle="@string/preference_message_1_message_title" />
    </PreferenceCategory>
    
	<PreferenceCategory android:title="@string/preference_message_3_title" >
	    <EditTextPreference
                android:key="pref_mess_3_lat"
                android:title="@string/preference_message_1_lat_title"
                android:summary="@string/preference_message_1_lat_info"
                android:dialogTitle="@string/preference_message_1_lat_title" />
	    <EditTextPreference
                android:key="pref_mess_3_long"
                android:title="@string/preference_message_1_long_title"
                android:summary="@string/preference_message_1_long_info"
                android:dialogTitle="@string/preference_message_1_long_title" />
	    <EditTextPreference
                android:key="pref_mess_3_mess"
                android:title="@string/preference_message_1_message_title"
                android:summary="@string/preference_message_1_message_info"
                android:dialogTitle="@string/preference_message_1_message_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_settings_title" >
        <ListPreference
            android:dialogTitle="@string/preference_background_color_dialog_title"
            android:entries="@array/preference_background_color_entries_list"
            android:entryValues="@array/preference_background_color_entryvalues_list"
            android:key="pref_bgcolor"
            android:summary=""
            android:title="@string/preference_background_color_title" />
        <ListPreference
            android:dialogTitle="@string/preference_range_dialog_title"
            android:entries="@array/preference_range_entries_list"
            android:entryValues="@array/preference_range_entryvalues_list"
            android:key="pref_range"
            android:summary=""
            android:title="@string/preference_range_title" />
        <EditTextPreference
                android:key="pref_password"
                android:title="@string/preference_password_title"
                android:summary="@string/preference_password_info"
                android:dialogTitle="@string/preference_password_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_info_title" >
        <Preference
            android:key="pref_version"
            android:summary="1.0"
            android:title="Version" />
        <Preference
            android:key="pref_copyright"
            android:summary="Evan Li"
            android:title="Copyright" />
    </PreferenceCategory>

</PreferenceScreen>